--- a/src/app/common/footer/footer.scss
+++ b/src/app/common/footer/footer.scss
@@ -4,20 +4,20 @@
   box-shadow: 0 0 0.8em 1.2em #000;
   color: #fff;
   font-size: 1.1em;
-  height: 4em;
   letter-spacing: 2px;
   margin-top: 1.2em;
+  min-height: 4em;
   position: absolute;
   text-align: center;
   width: 100%;
 }
 
-.footer-link {
-  color: #a8bce4;
-  text-decoration: none;
-  transition: 0.3s all ease;
+.footer-paragraph {
+  display: inline-block;
+}
 
-  &:hover {
-    color: #ff5900;
-  }
+.footer-link-logo {
+  margin: 0 1em;
+  max-height: 2.5em;
+  vertical-align: middle;
 }
