--- a/src/app/common/common.scss
+++ b/src/app/common/common.scss
@@ -4,6 +4,7 @@ html {
 }
 
 body {
+  background-color: #cde2ec;
   font-family: Calibri, 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
   margin: 0 0 6em;
 }
