update FooterComponent styles

--- a/src/app/common/footer/footer.scss
+++ b/src/app/common/footer/footer.scss
@@ -30,7 +30,7 @@
 }
 
 .footer-text-handwritten {
-  color: #ff5900;
+  color: #0f0;
   font-family: GelPenHeavy, Arial, Helvetica, sans-serif;
   margin: 0 0.5em;
 }
